# LinuxApplicationDevelopment

01_TerminalProject/: Show.c  makefile
02_Multifile/: fun.c  makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb1  gdb2  range.c  target1  target2
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protected.c  test_0.sh  test_1.sh  test_11.sh  test_12.sh  test_13.sh  test_2.sh  test_3.sh  test_4.sh  test_5.sh  test_protected.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_I18n/: Makefile.am  configure.ac  guess_number.c  ru.po
09_PatchDiff/: Makefile  maze_generator.c  maze_v1.patch  maze_v2.patch  maze_v3.patch
10_LibTesting/: Makefile.am  configure.ac  run.sh
10_LibTesting/src/: Makefile.am  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  test.ts  tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  guess_number.c  ru.po  run.sh
12_InstallPackaging/: Doxyfile.in  Makefile  Makefile.am  configure.ac
12_InstallPackaging/scripts/: install.sh  uninstall.sh
12_InstallPackaging/src/: Makefile.am  guess_number.c  guess_number.h  guess_number.pot  main.c  ru.po  tests.c
